--- a/clojure/README
+++ b/clojure/README
@@ -1,5 +1,5 @@
-== Summary == 
-The present project provides a simple implementation of 101companies in Clojure. 
+== Intent == 
+a simple clojure implementation
 
 == Description ==
 
