--- a/clojure/README
+++ b/clojure/README
@@ -9,7 +9,7 @@ defrecord will generate compiled class bytecode for companies, departments and e
 There are two scenarios: Cutting and summing up salaries in a company.
 We also provide a sample company (meganalysis).   
 
-=== Architecture of the project ===
+=== Architecture ===
  
 In company.clj we make use of clojure's defrecord to define the companies structure.
 scenarios.clj provides functionality to cut and total salaries.
