--- a/clojure/README
+++ b/clojure/README
@@ -1,4 +1,4 @@
-== Summary == 
+== Intent == 
 The present project provides a simple implementation of 101companies in Clojure. 
 
 == Description ==
