--- a/clojure/README
+++ b/clojure/README
@@ -12,9 +12,8 @@ We also provide a sample company ("meganalysis").
 
 === Architecture ===
  
-In company.clj we make use of clojure's defrecord to define the companies structure.
-scenarios.clj provides functionality to cut and total salaries.
-A sample company can be found in meganalysis.clj.
+In [this!!company.clj]] we make use of clojure's defrecord to define the companies 
+scenarios.clj provides functionality to cut and total salaries.A sample company can be found in meganalysis.clj.
 
 == Usage ==
 
