--- a/capabilities/Object_XML_mapping/MegaL/docs/macros.tex
+++ b/capabilities/Object_XML_mapping/MegaL/docs/macros.tex
@@ -10,7 +10,7 @@
 \lstdefinelanguage{megal}{%
   breaklines=true,
   numbers=none,
- morekeywords={Language,Library,Fragment,partOf,Program,variable,local,megamodel,include,elementOf,conformsTo,File,Function,ObjectGraph,subsetOf,dependsOn,correspondsTo,definitionOf,realizationOf},
+ morekeywords={Technology,Language,Library,Fragment,partOf,Program,variable,local,megamodel,include,elementOf,conformsTo,File,Function,ObjectGraph,subsetOf,dependsOn,correspondsTo,definitionOf,realizationOf},
   sensitive=true,
   morecomment=[l]{--},
   morecomment=[s]{\{-}{-\}},
